# cutlass

./: .gitignore
examples/61_ampere_halft_tensorop_gpt3_mlp/: CMakeLists.txt  ampere_halft_tensorop_gpt3_mlp.cu
examples/62_hopper_halft_tensorop_gpt3_mlp/: CMakeLists.txt  hopper_halft_allreduce.cu  hopper_halft_tensorop_gpt3_mlp.cu  mscclpp_allreduce.h
include/cutlass/epilogue/collective/: default_epilogue.hpp
include/cutlass/gemm/device/: gemm_universal.h  gemm_universal_base.h
include/cutlass/gemm/kernel/: gemm.h  gemm_universal.h  sm90_gemm_tma_warpspecialized.hpp  sm90_gemm_tma_warpspecialized_cooperative.hpp  sm90_gemm_tma_warpspecialized_pingpong.hpp  sm90_gemm_warpspecialized.hpp  sm90_gemm_warpspecialized_cooperative.hpp  sm90_gemm_warpspecialized_pingpong.hpp
tools/util/include/cutlass/util/: device_memory.h  host_tensor.h  host_tensor_planar_complex.h
